syntax = "proto3";

package holos.object.v1alpha1;

option go_package = "github.com/holos-run/holos/service/gen/holos/object/v1alpha1;object";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

// For validation, see the [Standard constraints](https://github.com/bufbuild/protovalidate/blob/main/docs/standard-constraints.md)

message Detail {
  // Created by entity
  optional ResourceEditor created_by = 1;
  // Created at timestamp
  google.protobuf.Timestamp created_at = 2 [(buf.validate.field).timestamp.lt_now = true];
  // Updated by entity
  optional ResourceEditor updated_by = 3;
  // Updated at timestamp
  google.protobuf.Timestamp updated_at = 4 [(buf.validate.field).timestamp.lt_now = true];
}

// Subject represents the oidc iss and sub claims which uniquely identify a subject.
message Subject {
  // iss represents the oidc id token iss claim.  Limits defined at
  // https://openid.net/specs/openid-authentication-1_1.html#limits
  string iss = 1 [
    (buf.validate.field).string = {
      min_len: 1,
      max_len: 255,
      uri: true,
      prefix: "https://",
    }];
  // sub represents the oidc id token sub claim.
  string sub = 2 [(buf.validate.field).string = {
    min_len: 1,
    max_len: 255,
  }];
}

// UserRef refers to a User by uuid, email, or by the oidc iss and sub claims.
message UserRef {
  oneof user {
    option (buf.validate.oneof).required = true;
    string user_id = 1 [(buf.validate.field).string.uuid = true];
    string email = 2 [(buf.validate.field).string.email = true];
    Subject subject = 3;
  }
}

// Organization represents the ways in which a organization may be uniquely identified in the system.
message OrganizationRef {
  oneof org {
    option (buf.validate.oneof).required = true;
    string org_id = 1 [(buf.validate.field).string.uuid = true];
    string org_name = 2 [
      (buf.validate.field).cel = {
        id: "org.name"
        message: "All characters must be either a hyphen or alphanumeric.  Cannot start with a hyphen.  Cannot include consecutive hyphens.  Length must be at least 3 and at most 39."
        // https://github.com/google/cel-spec/blob/master/doc/langdef.md#regular-expressions
        expression: "this.matches(\'^(?!-)(?!.*--)([a-zA-Z0-9-]){3,39}$\')"
      }
    ];
  }
}

// ResourceEditor represents the entity that most recently created or edited a resource.
message ResourceEditor {
  oneof editor {
    option (buf.validate.oneof).required = true;
    string user_id = 1 [(buf.validate.field).string.uuid = true];
  }
}

message ResourceOwner {
  oneof resource_owner {
    option (buf.validate.oneof).required = true;
    string org_id = 1 [(buf.validate.field).string.uuid = true];
    string user_id = 2 [(buf.validate.field).string.uuid = true];
  }
}

// Form represents a Formly json powered form.
message Form {
  // fields represents FormlyFieldConfig[] encoded as an array of JSON objects
  // organized by section.
  repeated google.protobuf.Struct field_configs = 1;
}

// PlatformConfig represents the data passed from the holos cli to CUE when
// rendering configuration.
message PlatformConfig {
  // Platform UUID.
  string platform_id = 1 [(buf.validate.field).string.uuid = true];
  // Platform Model.
  optional google.protobuf.Struct platform_model = 2;
}
